# vocabulazer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: main  main.cpp
include/file/: extractor_factory.hpp  pdf_extractor.hpp  text_extractor.hpp
include/text/: text_converter.hpp
src/file/: extractor_factory.cpp  pdf_extractor.cpp  text_extractor.cpp
src/text/: text_converter.cpp
